[metadata]
name = synth
version = 0.0.2
author = Dilshan
author_email = gunawardhanaudara@gmail.com
description = H2O wave synth package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DilshanDilipudara/synth-package.git
project_urls =
    Bug Tracker = https://github.com/DilshanDilipudara/synth-package.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src